syntax = "proto3";

package swarm_sync;

import "google/protobuf/empty.proto";

// ---- Commands from AdminShell to CoreBridge ----
message CommandRequest {
  string command = 1; // Command name (e.g., Startup, Restart, Shutdown)
}

message CommandResponse {
  string status = 1; // Status of the command (e.g., success, failure)
  string result = 2; // Result message or additional info
}

// ---- Status updates from CoreBridge to AdminShell ----
message StatusUpdate {
  string update_type = 1; // E.g., "heartbeat", "task", etc.
  int32 value = 2;        // Heartbeat integer or other status value
}

service CoreBridgeService {
  // AdminShell sends commands, CoreBridge performs them and responds
  rpc ExecuteCommand(CommandRequest) returns (CommandResponse);

  // CoreBridge streams status updates to AdminShell
  rpc StreamStatusUpdates(google.protobuf.Empty) returns (stream StatusUpdate);
}
